<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">


        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/_14sdp"
            android:src="@drawable/back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_background"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip"
        android:layout_below="@+id/header"
        android:layout_above="@+id/banner_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="30.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="16.0dip"
                android:text="@string/color"
                android:textColor="@color/white"
                android:textSize="14.0sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/recyclerColor"
                android:layout_width="match_parent"
                android:layout_height="50.0dip"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="44.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="16.0dip"
                android:text="Abstract"
                android:textColor="@color/white"
                android:textSize="14.0sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerAbstract"
                android:layout_width="match_parent"
                android:layout_height="150.0dip"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="44.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="16.0dip"
                android:text="@string/nature"
                android:textColor="@color/white"
                android:textSize="14.0sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/recyclerNature"
                android:layout_width="match_parent"
                android:layout_height="150.0dip"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="44.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="16.0dip"
                android:text="Love"
                android:textColor="@color/white"
                android:textSize="14.0sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerLove"
                android:layout_width="match_parent"
                android:layout_height="120.0dip"
                android:nestedScrollingEnabled="false" />

            <include layout="@layout/layout_nads" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="44.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="16.0dip"
                android:text="Animal"
                android:textColor="@color/white"
                android:textSize="14.0sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/recyclerAnimal"
                android:layout_width="match_parent"
                android:layout_height="150.0dip"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="44.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="16.0dip"
                android:text="Cartoon"
                android:textColor="@color/white"
                android:textSize="14.0sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCartoon"
                android:layout_width="match_parent"
                android:layout_height="120.0dip"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="44.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="16.0dip"
                android:text="Vehicle"
                android:textColor="@color/white"
                android:textSize="14.0sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerVehicle"
                android:layout_width="match_parent"
                android:layout_height="120.0dip"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/ad_banner_lay"/>
</RelativeLayout>